add android studio 3.5 canary 12 links

--- a/index.html
+++ b/index.html
@@ -439,6 +439,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.5 Canary 12 -->
+                            <tr>
+                                <td rowspan="5">3.5 Canary 12</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.11/android-studio-ide-191.5471097-windows.zip">android-studio-ide-191.5471097-windows.zip</a>
+                                </td>
+                                <td>1044684920 bytes</td>
+                                <td>9ef252317328bf74d4093f4b6a9d07bada38da0db5dcf0aa724daf1a2f1a8cf2</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tNc79ly1g27q2l4rczj31du0jy0yk.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.11/android-studio-ide-191.5471097-windows32.zip">android-studio-ide-191.5471097-windows32.zip</a>
+                                </td>
+                                <td>1044147959 bytes</td>
+                                <td>fc71f1cbeef6aae6d2cfb77c6d07af42a523821416cda0ea70fb5b24f2dbd82f</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.11/android-studio-ide-191.5471097-mac.zip">android-studio-ide-191.5471097-mac.dmg</a>
+                                </td>
+                                <td>1036660506 bytes</td>
+                                <td>e37e58c7ec8e827745a765f9369516b39cdf52610a40697045e00bd755c42b2f</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.11/android-studio-ide-191.5471097-linux.tar.gz">android-studio-ide-191.5471097-linux.tar.gz</a>
+                                </td>
+                                <td>1050188328 bytes</td>
+                                <td>8a093295af266e146eef1929a84ef2b28dd102d885a5cdd1c5df89e0908fe9b7</td>
+                            </tr>
                             <!-- 3.4 正式版 -->
                             <tr>
                                 <td rowspan="6">3.4 正式版</td>
