--- a/donate.html
+++ b/donate.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="static/image/favicon.ico">
     <title>AndroidDevTools</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="翻墙 下载 最新版 Android开发工具 ADT Bundle Android Studio AndroidStudio 2.0 Android SDK SDK Tools Gradle Android SDK下载 android sdk下载 Android Studio下载 android studio下载 Gradle下载  gradle下载 SDK Tools下载 sDK tools下载">
+    <meta name="description" content="下载 最新版 Android开发工具 ADT Bundle Android Studio AndroidStudio 2.0 Android SDK SDK Tools Gradle Android SDK下载 android sdk下载 Android Studio下载 android studio下载 Gradle下载  gradle下载 SDK Tools下载 sDK tools下载">
     <meta name="ujianVerification" content="ee5a6c5854f1826b3123039d726496c9" />
     <link href="static/css/bootstrap-combined.min.css" rel="stylesheet">
     <link href="static/css/app.css" rel="stylesheet">
