add android studio 3.5 canary 13 links

--- a/index.html
+++ b/index.html
@@ -439,6 +439,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.5 Canary 13 -->
+                            <tr>
+                                <td rowspan="5">3.5 Canary 13</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.12/android-studio-ide-191.5487692-windows.zip">android-studio-ide-191.5487692-windows.zip</a>
+                                </td>
+                                <td>1012105251 bytes</td>
+                                <td>d53e128ef4a21d63eac098011eaaa0c52aa4b3a6e70a43647eca6ec6bec3fbef</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tNc79ly1g2hganftwpj31e80jedlp.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.12/android-studio-ide-191.5487692-windows32.zip">android-studio-ide-191.5487692-windows32.zip</a>
+                                </td>
+                                <td>1011568290 bytes</td>
+                                <td>50cb74ff92e72c657e80e2b83e4d48468f3ca93accdb07649d0ece7d39bedfc1</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.12/android-studio-ide-191.5487692-mac.zip">android-studio-ide-191.5487692-mac.dmg</a>
+                                </td>
+                                <td>1004073380 bytes</td>
+                                <td>2d6a9321accb974c240e1b63fd4575b4c4a374517341c781f9cffb9e203cf46f</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.5.0.12/android-studio-ide-191.5487692-linux.tar.gz">android-studio-ide-191.5487692-linux.tar.gz</a>
+                                </td>
+                                <td>1017594566 bytes</td>
+                                <td>ff1da2c1a4f19668680948ef6e8e2479c0d57ee54767c2c14a3a875214168d47</td>
+                            </tr>
                             <!-- 3.5 Canary 12 -->
                             <tr>
                                 <td rowspan="5">3.5 Canary 12</td>
