修复广告图不显示的问题

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <div class="ad-float-right">
             <a href="https://plus.hencoder.com" title="用碎片化的时间，学习系统化内容；短期暴力提升，快速突破瓶颈。HenCoder Plus 作为一套全方位系统化的在线直播课程，开课两期以来，吸纳了来自 BAT、头条、滴滴等公司以及硅谷、台湾和日本的众多学员报名参加，并且众多学员在毕业一个月内先后入职阿里、腾讯、小米、头条等公司。其中一位学员拿到 80w+ 的年薪，多位学员年薪达到 45w 左右。" onclick="trackOutboundLink('https://plus.hencoder.com', 'AD-HenCoderPlus', 'click');"
                 target="_blank">
-                <img src="https://ws3.sinaimg.cn/large/006tKfTcly1g1n9b3ehsij30780bmjsu.jpg" style="height: 313.5px; width: 192.5px;">
+                <img src="https://i.loli.net/2019/04/29/5cc673747088f.jpg" style="height: 313.5px; width: 192.5px;">
             </a>
         </div>
         <div class="ad-float-right hide">
