修复不能加载友链图片的问题

--- a/gay_friends.html
+++ b/gay_friends.html
@@ -170,134 +170,146 @@
     <section id="body">
         <div class="container body-container">
             <div class="row">
-                <h1 class="content-title">好基友们</h1>
-                <p align="center">以下是我的好基友们，他们既是Android牛人，也是活跃在社区，乐于分享帮助他人，推动技术进步的有为青年，以及其他一些有用的、有意思的网站。</p>
-                <br/>
                 <div id="gay_friends_list" class="link-image-list">
+                    <center>
+                        <h2>好基友们</h2>
+                    </center>
+                    <p>以下是我的好基友们，他们既是 Android 牛人，也是活跃在社区，乐于分享帮助他人，推动技术进步的有为青年，以及其他一些有用的、有意思的网站。</p>
                     <ul>
                         <li>
-                            <a href="http://gank.io" title="干货集中营，每日分享妹子图 和 技术干货，还有供大家中午休息的休闲视频">
-                                <img src="https://ww1.sinaimg.cn/large/610dc034gw1f1lnnpb9tej203n01sdfn.jpg" />
+                            <a href="http://gank.io" target="_blank" title="干货集中营，每日分享妹子图 和 技术干货，还有供大家中午休息的休闲视频">
+                                <img src="https://i.loli.net/2019/04/28/5cc573795dc50.jpg" />
+                            </a>
+                        </li>
+                        <li class="hide">
+                            <a href="http://stormzhang.com" target="_blank" title="Android开发者 + Ruby语言爱好者 + Google脑残粉，爱技术，爱尝鲜，爱开源，爱设计，也爱赚钱！ 热爱并沉溺于移动互联网，Want to make a good app!">
+                                <img src="https://i.loli.net/2019/04/28/5cc5831675042.png" />
                             </a>
                         </li>
                         <li>
-                            <a href="http://stormzhang.com" title="Android开发者 + Ruby语言爱好者 + Google脑残粉，爱技术，爱尝鲜，爱开源，爱设计，也爱赚钱！ 热爱并沉溺于移动互联网，Want to make a good app!">
-                                <img src="https://ww2.sinaimg.cn/large/610dc034gw1f1qxp38lqhj203m01s3yc.jpg" />
+                            <a href="http://www.codekk.com" target="_blank" title="codeKK，专注于开源项目源码解析及优秀开源项目的分享">
+                                <img src="http://www.codekk.com/images/codekk-com-130-64.png" />
                             </a>
                         </li>
                         <li>
-                            <a href="http://www.codekk.com" title="codeKK，专注于开源项目源码解析及优秀开源项目的分享">
-                                <img src="https://ws3.sinaimg.cn/large/0069RVTdly1fu7rs8bnwqj303m01smx2.jpg" />
+                            <a href="http://www.trinea.cn/" target="_blank" title="Trinea，目前在滴滴出行担任技术专家，主攻 Java 和 Android，专于性能调优和框架设计。">
+                                <img src="http://www.codekk.com/images/trinea-cn-130-64.png" />
                             </a>
                         </li>
                         <li>
-                            <a href="http://www.trinea.cn/" title="Trinea，目前在滴滴出行担任技术专家，主攻 Java 和 Android，专于性能调优和框架设计。">
-                                <img src="https://ws4.sinaimg.cn/large/0069RVTdly1fu7rsf2o3vj303m01sq2u.jpg" />
+                            <a href="http://www.liaohuqiu.net" target="_blank" title="秋百万，Make it better.">
+                                <img src="https://i.loli.net/2019/04/28/5cc5739ae808a.jpg" />
                             </a>
                         </li>
                         <li>
-                            <a href="http://www.liaohuqiu.net" title="秋百万，Make it better.">
-                                <img src="https://ww2.sinaimg.cn/large/86e2ff85gw1f1qvio0f2ej203m01s0sl.jpg" />
+                            <a href="http://droidyue.com/" target="_blank" title="技术小黑屋，Android 工程师，Infoq译者， 2015 GDG Devfest讲师;不是90后，89年出生的保定人在北京;喜欢终端上完成操作，对GUI有点偏见;一个优秀的程序员应该是一位艺术家，其代码不可增不可减。">
+                                <img src="https://i.loli.net/2019/05/01/5cc948d45fc58.png" />
+                            </a>
+                        </li>
+                        <li class="hide">
+                            <a href="http://drakeet.me" target="_blank" title="Drakeet">
+                                <img src="https://i.loli.net/2019/04/28/5cc5835b85b24.jpg" />
                             </a>
                         </li>
                         <li>
-                            <a href="http://droidyue.com/" title="技术小黑屋，Android 工程师，Infoq译者， 2015 GDG Devfest讲师;不是90后，89年出生的保定人在北京;喜欢终端上完成操作，对GUI有点偏见;一个优秀的程序员应该是一位艺术家，其代码不可增不可减。">
-                                <img src="https://ws1.sinaimg.cn/large/0069RVTdly1fu4e8vt3n5j303m01sgli.jpg" />
+                            <a href="http://hukai.me" target="_blank" title="Hi，我是胡凯，就职于腾讯从事Android开发的工作。">
+                                <img src="https://i.loli.net/2019/04/28/5cc583b7235a0.jpg" />
                             </a>
                         </li>
                         <li>
-                            <a href="http://drakeet.me" title="Drakeet">
-                                <img src="https://ww4.sinaimg.cn/large/86e2ff85gw1f1jt6vd4snj203m01sjra.jpg" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://hukai.me" title="Hi，我是胡凯，就职于腾讯从事Android开发的工作。">
-                                <img src="https://ws4.sinaimg.cn/large/0069RVTdly1fu7rsqt1koj303m01s3ye.jpg" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://androidweekly.cn" title="Android 开发技术周报,汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。">
-                                <img src="https://ws3.sinaimg.cn/large/0069RVTdly1fu7rqqp93cj303m01sq2w.jpg" />
+                            <a href="http://www.androidweekly.io/" target="_blank" title="汇集互联网上每周Android开发相关的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。">
+                                <img src="https://i.loli.net/2019/05/01/5cc9475b258bd.png" />
                             </a>
                         </li>
                         <li>
                             <a href="http://www.race604.com" title="专注 Android 移动应用开发，在开发中积累和成长。">
-                                <img src="https://ws2.sinaimg.cn/large/006tNc79ly1fgt5qreedyj303m01s0sl.jpg" />
+                                <img src="https://i.loli.net/2019/04/28/5cc58414b49d1.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://kymjs.com" title="Hello，大家好，我是张涛，网名kymjs，在深圳的湖北人。开源中国移动开发工程师。爱看书，爱敲码，善于交流，乐于分享。曾担任电影《天籁：一万年以后》新媒体推广产品经理，负责电影推广营销事项。">
-                                <img src="https://ww1.sinaimg.cn/large/8a41f469jw1f27ukzgjhuj203m01s0tb.jpg" />
+                                <img src="https://i.loli.net/2019/04/28/5cc5843235169.jpg" />
                             </a>
                         </li>
-                        <li>
+                        <li class="hide">
                             <a href="http://www.devtf.cn" target="_blank" title="开发技术前线 ( Dev Tech Frontier ) 是一个各个IT领域 ( 前期只有Android和iOS )高质量技术文章、开源库、技术咨询的聚合网站，通过引入最新的优质文章，让我们的技术跟上国际步伐。该网站由Mr.Simple、chaossss、tiny-times、dupengwei创立，并且由开发技术前线Android开源组与开发技术前线iOS开源组维护,希望我们做的这些对大家有一点帮助。">
-                                <img src="https://ww1.sinaimg.cn/large/8a41f469jw1f29a4e11baj203m01st8i.jpg" />
+                                <img src="https://i.loli.net/2019/04/28/5cc584b7a2fc2.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://diycode.cc" target="_blank" title="DiyCode是一个优雅、极客、创意、分享、美好的开发社区">
-                                <img src="https://ww2.sinaimg.cn/mw690/6ff56379jw1f339yb3a5oj203m01sweb.jpg" />
+                                <img src="https://i.loli.net/2019/04/28/5cc5a0426a785.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://gityuan.com" target="_blank" title="Android 系统工程师，专注于 Android 最新源码的架构分析">
-                                <img src="https://ww3.sinaimg.cn/large/8a41f469jw1f62jpc97ujj203m01sq2q.jpg" />
+                                <img src="https://i.loli.net/2019/04/28/5cc5a09d75aab.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://www.gcssloop.com" target="_blank" title="一名来自2.5次元的魔法师，Android自定义View系列文章作者，非著名程序员">
-                                <img src="https://www.gcssloop.com/assets/siteinfo/friends/gcssloop.jpg" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://www.materialdoc.cn" target="_blank" title="Material Design 开发者参考文档">
-                                <img src="https://ws1.sinaimg.cn/large/006tKfTcly1fgf49wir8cj303m01saa3.jpg" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://code-labs.cn/io2017" target="_blank" title="Google I/O CodeLabs 2017">
-                                <img src="https://ws2.sinaimg.cn/large/006tKfTcly1fgf49wogaoj303m01s0sq.jpg" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.typeisbeautiful.com" target="_blank" title="Type is Beautiful">
-                                <img src="http://ws2.sinaimg.cn/large/006tNc79ly1fgu528zmynj303m01s743.jpg" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://green-android.org/" target="_blank" title="Android 绿色应用公约">
-                                <img src="http://ws4.sinaimg.cn/large/006tNc79ly1fguztaftm8j303m01sweg.jpg" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://www.studyjamscn.com" target="_blank" title="Study Jams 活动可以帮助任何零基础的学员入门 Android 开发，无需任何费用，优秀学员还可以得到 Google 的纪念证书。">
-                                <img src="http://ws1.sinaimg.cn/large/006tKfTcly1fgviwva49pj303m01sdfu.jpg" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://developers.google.cn" target="_blank" title="无需 FQ 就可以访问的 Google Developers 网站">
-                                <img src="http://ws4.sinaimg.cn/large/006tKfTcly1fgvjwejeksj303m01sjr9.jpg" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="" target="_blank" title="Google 女性开发者网站">
-                                <img src="http://ws1.sinaimg.cn/large/006tKfTcly1fgvjwecf5nj303m01st8l.jpg" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://gdgzhengzhou.org" target="_blank" title="郑州谷歌开发者社区官网">
-                                <img src="http://ws4.sinaimg.cn/large/006tKfTcly1fgvjweow2zj303m01s747.jpg" />
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://choosealicense.online" target="_blank" title="如何选择一个开源授权协议？">
-                                <img src="http://ws1.sinaimg.cn/large/006tKfTcly1fgvm98gj52j303m01s0sm.jpg" />
+                                <img src="http://www.gcssloop.com/assets/siteinfo/friends/gcssloop.jpg" />
                             </a>
                         </li>
                         <li>
                             <a href="http://hencoder.com" target="_blank" title="扔物线辞职在家憋了一年的大招，良心之作。">
-                                <img src="http://ws4.sinaimg.cn/large/006tNbRwly1fh92xjlh14j303m01sjr8.jpg" />
+                                <img src="https://i.loli.net/2019/04/28/5cc5a1a4c8d44.jpg" />
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div id="gay_friends_list" class="link-image-list" style="clear: both;">
+                    <center>
+                        <h2>Google 相关网站</h2>
+                    </center>
+                    <ul>
+                        <li>
+                            <a href="http://www.materialdoc.cn" target="_blank" title="Material Design 开发者参考文档">
+                                <img src="https://i.loli.net/2019/04/28/5cc5a05e9bef0.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://code-labs.cn/io2017" target="_blank" title="Google I/O CodeLabs 2017">
+                                <img src="https://i.loli.net/2019/04/28/5cc5a0b4e1fac.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://developers.google.cn" target="_blank" title="无需翻墙就可以访问的 Google Developers 网站">
+                                <img src="https://i.loli.net/2019/04/28/5cc5a149c01b2.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.womentechmakers.com/" target="_blank" title="Google 女性开发者网站">
+                                <img src="https://i.loli.net/2019/04/28/5cc5a16549cc5.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://gdgzhengzhou.org" target="_blank" title="郑州谷歌开发者社区官网">
+                                <img src="https://i.loli.net/2019/04/28/5cc5a18004ac1.jpg" />
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div id="gay_friends_list" class="link-image-list" style="clear: both;">
+                    <center>
+                        <h2>其他有趣的网站</h2>
+                    </center>
+                    <ul>
+                        <li>
+                            <a href="https://www.typeisbeautiful.com" target="_blank" title="Type is Beautiful">
+                                <img src="https://i.loli.net/2019/04/28/5cc5a1226f252.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://green-android.org/" target="_blank" title="Android 绿色应用公约">
+                                <img src="https://i.loli.net/2019/04/28/5cc5a0eb9b3a5.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://choosealicense.online" target="_blank" title="如何选择一个开源授权协议？">
+                                <img src="https://i.loli.net/2019/04/28/5cc5a19a851d0.jpg" />
                             </a>
                         </li>
                     </ul>
