fixed banner image don't show error

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <img src="https://i.loli.net/2019/04/29/5cc673747088f.jpg" style="height: 313.5px; width: 192.5px;">
             </a>
         </div>
-        <div class="ad-float-right hide">
+        <!-- <div class="ad-float-right hide">
             <a href="https://promotion.aliyun.com/ntms/act/vmpt/aliyun-group/home.html?userCode=j7dufdfe&utm_source=androiddevtools.cn&utm_medium=website-rightbar" title="【全民云计算升级】拼团上云更优惠，拉1人拼团，云服务器立享￥234" target="_blank">
                 <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fweuai7fnij303k03kt9c.jpg">
             </a>
@@ -289,26 +289,26 @@
             <a href="http://t.cn/Ro1OZoN" title="Raspberry Pi 3 Model B 树莓派3代控制器 含系统卡 电源 散热片 保护外壳--奥松机器人RobotBase" onclick="trackOutboundLink('http://t.cn/Ro1OZoN', 'AD-Amazon-RaspberryPi-3-MB', 'click');" target="_blank">
                 <img src="http://ws1.sinaimg.cn/large/006tKfTcly1fhw3x0odfmj303m03m746.jpg">
             </a>
-        </div>
+        </div> -->
     </div>
 
     <div class="banner has-dots" id="ad-banner-list">
         <ul>
-            <li style="background-image: url(https://ws3.sinaimg.cn/large/006tKfTcgy1g1p7mmzhatj32bc0rsn0h.jpg); width: 25%;" data-link="https://partner.lizhi.io/androiddevtools/cp?utm_source=androiddevtools.cn&amp;utm_medium=banner" data-tag="LiZhi-li" data-event-type="click">
+            <li style="background-image: url(https://i.loli.net/2019/05/10/5cd4dfb5f1a74.png); width: 25%;" data-link="https://partner.lizhi.io/androiddevtools/cp?utm_source=androiddevtools.cn&amp;utm_medium=banner" data-tag="LiZhi-li" data-event-type="click">
                 <div class="inner">
                     <h1>众多精选正版软件</h1>
                     <p style="color: darkgray">买正版，售后好，三折起<br/><br/><br/></p>
                     <a class="btn" href="https://partner.lizhi.io/androiddevtools/cp?utm_source=androiddevtools.cn&amp;utm_medium=banner" onclick="trackOutboundLink('https://partner.lizhi.io/androiddevtools/cp', 'LiZhi-Button', 'click');" title="">去领劵</a>
                 </div>
             </li>
-            <li style="background-image: url(https://ws3.sinaimg.cn/large/006tNbRwly1fwetsi98l7j31ef0jogmj.jpg); width: 25%;" data-link="https://androidweekly.io/android-pie/?utm_source=androiddevtools_banner&amp;utm_medium=website" data-tag="Android-P-li" data-event-type="click">
+            <li style="background-image: url(https://i.loli.net/2019/05/10/5cd4dff4e976e.png); width: 25%;" data-link="https://androidweekly.io/android-pie/?utm_source=androiddevtools_banner&amp;utm_medium=website" data-tag="Android-P-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android Pie</h1>
                     <p style="color: darkgray">采用 AI 技术，让智能手机变得更智能、操作更简便且更贴合您的需求。</p>
                     <a class="btn" href="https://androidweekly.io/android-pie/?utm_source=androiddevtools_banner&amp;utm_medium=website" onclick="trackOutboundLink('https://androidweekly.io/android-pie/', 'Android-P-Page', 'click');" title="">去看看</a>
                 </div>
             </li>
-            <li class="hide" style="background-image: url(https://ws2.sinaimg.cn/large/006tNbRwly1fwf0de3gf3j31680eqgmc.jpg); width: 25%;" data-link="https://developer.android.google.cn/jetpack/?utm_source=androiddevtools_banner&amp;utm_medium=website" data-tag="Android-Jetpack-li"
+            <li class="hide" style="background-image: url(https://i.loli.net/2019/05/10/5cd4e011ebea9.png); width: 25%;" data-link="https://developer.android.google.cn/jetpack/?utm_source=androiddevtools_banner&amp;utm_medium=website" data-tag="Android-Jetpack-li"
                 data-event-type="click">
                 <div class="inner">
                     <h1>Android Jetpack</h1>
@@ -316,59 +316,28 @@
                     <a class="btn" href="https://developer.android.google.cn/jetpack/?utm_source=androiddevtools_banner&amp;utm_medium=website" onclick="trackOutboundLink('https://developer.android.google.cn/jetpack/', 'Android-Jetpack-Page', 'click');" title="">去试试</a>
                 </div>
             </li>
-            <!-- <li class="hide" style="background-image: url(https://ws4.sinaimg.cn/large/006tNc79ly1fitrz88tc8j31jk0goq71.jpg); width: 25%;" data-link="http://www.androidweekly.cn/android-oreo-dev-post-page/?utm_source=androiddevtools_banner&amp;utm_medium=website"
-                data-tag="Android-Oreo-Weixin-li" data-event-type="click">
-                <div class="inner">
-                    <h1>Android Oreo</h1>
-                    <p style="color: darkgray">奥利奥</p>
-                    <a class="btn" href="http://www.androidweekly.cn/android-oreo-dev-post-page/?utm_source=androiddevtools_banner&amp;utm_medium=website" onclick="trackOutboundLink('http://www.androidweekly.cn/android-oreo-dev-post-page/', 'Android-Oreo-Post-Page', 'click');"
-                        title="">去尝尝</a>
-                </div>
-            </li> -->
-            <li style="background-image: url(http://ww1.sinaimg.cn/large/006rtfu7jw1f5tv4qwp4pj31jk0go0tb.jpg); width: 25%;" data-link="http://www.androidweekly.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="AndroidWeekly-li" data-event-type="click">
+            <li style="background-image: url(https://i.loli.net/2019/05/10/5cd4e030e1e64.png); width: 25%;" data-link="http://www.androidweekly.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="AndroidWeekly-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android 开发技术周报</h1>
                     <p>汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。</p>
                     <a class="btn" href="http://www.androidweekly.cn" onclick="trackOutboundLink('http://www.androidweekly.cn', 'AndroidWeekly', 'click');" title="汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。">去订阅</a>
                 </div>
             </li>
-            <!-- <li style="background-image: url(https://ws3.sinaimg.cn/large/006tNc79ly1fiu5wirrvsj31jk0gon4o.jpg); width: 25%;" data-link="https://developer.android.google.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="Android-8.0-li" data-event-type="click">
-                <div class="inner">
-                    <h1>Android 8.0 Oreo</h1>
-                    <p>Android 奥利奥</p>
-                    <a class="btn" href='https://developer.android.google.cn' onclick="trackOutboundLink('https://developer.android.google.cn', 'Android-8.0', 'click');" title="Android 奥利奥">去尝尝</a>
-                </div>
-            </li> -->
-            <li style="background-image: url(https://ws2.sinaimg.cn/large/006tNc79ly1fiu7q0q5h8j31jk0go770.jpg);" data-link="https://developer.android.google.cn/develop/index.html?utm_source=androiddevtools.cn&utm_medium=website" data-tag="Android-Architecture-Components-li"
-                data-event-type="click">
+            <li style="background-image: url(https://i.loli.net/2019/05/10/5cd4e04a004b4.png);" data-link="https://developer.android.google.cn/develop/index.html?utm_source=androiddevtools.cn&utm_medium=website" data-tag="Android-Architecture-Components-li" data-event-type="click">
                 <div class="inner">
                     <h1>Android Architecture Components</h1>
                     <p>Android 架构组件</p>
                     <a class="btn" href='https://developer.android.google.cn/develop/index.html' onclick="trackOutboundLink('https://developer.android.google.cn/develop/index.html', 'Android-Architecture-Components', 'click');" title="官方下载 Android Studio">去学习</a>
                 </div>
             </li>
-            <li style="background-image: url(https://ws2.sinaimg.cn/large/006tNc79ly1fiu5wi0cygj31jk0gon2g.jpg);" data-link="https://developer.android.google.cn/studio/index.html?utm_source=androiddevtools.cn&utm_medium=website" data-tag="AndroidStudio-li" data-event-type="click">
-                <div class="inner">
-                    <h1>Android Studio</h1>
-                    <p>官方下载 Android Studio</p>
-                    <a class="btn" href='https://developer.android.google.cn/studio/index.html' onclick="trackOutboundLink('https://developer.android.google.cn/studio/index.html', 'Android Studio', 'click');" title="官方下载 Android Studio">去下载</a>
-                </div>
-            </li>
-            <li style="background-image: url(http://ww1.sinaimg.cn/large/006rtfu7jw1f5tuy0n1fkj31jk0goq38.jpg); width: 25%;" data-link="http://www.materialdoc.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="Materialdoc-li" data-event-type="click">
+            <li style="background-image: url(https://i.loli.net/2019/05/10/5cd4e0c6a672c.png); width: 25%;" data-link="http://www.materialdoc.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="Materialdoc-li" data-event-type="click">
                 <div class="inner">
                     <h1>Material Design</h1>
                     <p>开发者参考文档</p>
                     <a class="btn" href='http://www.materialdoc.cn' onclick="trackOutboundLink('http://www.materialdoc.cn', 'Materialdoc', 'click');" title="开发者参考文档">去查查</a>
                 </div>
             </li>
-            <!-- <li class="hide" style="background-image: url(http://ww3.sinaimg.cn/large/006tNc79gy1fe8qh3q29fj31jk0gotbc.jpg); width: 25%;" data-link="http://code-labs.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="CodeLabs-li" data-event-type="click">
-                <div class="inner">
-                    <h1>Code Labs</h1>
-                    <p>各种 Google 技术的 Code Labs</p>
-                    <a class="btn" href='http://code-labs.cn' onclick="trackOutboundLink('http://code-labs.cn', 'CodeLabs', 'click');" title="各种 Google 技术的 Code Labs">去试试</a>
-                </div>
-            </li> -->
-            <li style="background-image: url(http://ww1.sinaimg.cn/large/006tKfTcgy1fcnsb4t09jj31jk0goq4c.jpg); width: 25%;" data-link="https://developers.google.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="GoogleDevelopers-li" data-event-type="click">
+            <li style="background-image: url(https://i.loli.net/2019/05/10/5cd4e3ef822db.png); width: 25%;" data-link="https://developers.google.cn?utm_source=androiddevtools.cn&utm_medium=website" data-tag="GoogleDevelopers-li" data-event-type="click">
                 <div class="inner">
                     <h1>Google Developers</h1>
                     <p>官方 Google 开发者网站</p>
